# catboost-rs

./: CHANGELOG.md  Cargo.toml  README.md
catboost-rs/: CHANGELOG.md  Cargo.toml
catboost-rs/src/: model.rs
catboost-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs
catboost-sys/src/: lib.rs
src/: model.rs
