[package]
name = "catboost-rs"
version = "0.1.6"
authors = ["Sergey Kiselev <kiselev.sg@gmail.com>", "Loh Jia Long <jlloh89@gmail.com>"]
edition = "2018"
repository = "https://github.com/jlloh/catboost-rs"
description = """
Unofficial Rust bindings for Catboost (Machine Learning Gradient Boosting Library from Yandex)
"""
license = "MIT/Apache-2.0"


[dependencies]
catboost-sys = "0.1.5"
